  * Fixed collapse bug which manifests itself when loading custom stacks
  * Use ellipsis on action and do labels (including do blocks in palette)
  * Fixed layout problem in boxes palette
  * Fixed regression in loading macros (NaN)
  * Set proper z-order for palettes, blocks, turtles, and canvas (Sam Parkinson)
  * Fixed problem with expanding booleans not docking to parents
  * Fixed race condition with collapsibles
  * Fixed problem with start block turtle decoration positioning
  * Removed event handler after load so that when you change the image
    associted a media block, other media blocks don't also change
  * Scale imported bitmaps to maximum of 1200x900

0.5
  * Eliminate joyride since it doesn't work on Android
  * Fixed problem with help container scaling.
  * Added broadcast and on event blocks.
  * Fixed problem with events not triggering if turtle has stopped.
  * Added three-arg flow blocks.

TODO:
  * Music blocks plugin
  * Save errors
  * Display rubrics
  * More efficient until and while?
  * Save to javascript
  * Rtl support
  * Zoom and scroll?
  * Use graphical error messages
  * Make expand an array, one element for each arg or slot
  * User-defined block types (trivial with factory)
  * Three-arg arg blocks (trivial with factory)
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * Button block (a stack that is run when you click on a button)
    - two args: artwork for the button; action name to take
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?)
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Camera doesn't work on Android
  * Reopen palettes after palette updates